# market-marker-bot

./: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
data/backtest/: BTCUSDT_orderbook.csv
docs/: ARCHITECTURE.md  DEVELOPMENT_PHASES.md  DOCUMENTATION_UPDATE_SUMMARY.md  ORDER_SIZE_FIX.md  RISK_SCALING_ENGINE.md  ROADMAP.md  SPEC.md  STRATEGY_DESIGN.md  TESTING_GUIDE.md
runs/20251116_012607/: state.json
runs/20251116_012720/: state.json
runs/20251116_012953/: state.json
runs/20251116_013024/: state.json
runs/20251116_121510/: state.json
runs/20251116_121706/: state.json
runs/20251116_121902/: state.json
runs/20251116_131136/: state.json
runs/20251116_131807/: state.json
runs/20251116_132325/: state.json
runs/20251116_132347/: state.json
runs/20251116_133131/: state.json
runs/20251116_133141/: state.json
runs/20251116_133452/: state.json
runs/20251117_083307/: state.json
runs/20251117_083600/: state.json
runs/20251117_104739/: state.json
runs/20251117_105830/: state.json
runs/20251117_110224/: state.json
runs/20251117_110720/: state.json
runs/20251117_111326/: state.json
runs/20251117_112633/: state.json
runs/20251117_112715/: state.json
runs/20251117_113125/: state.json
runs/20251117_113459/: state.json
runs/20251117_113642/: state.json
runs/20251117_114038/: state.json
scripts/: check_env.py  download_backtest_data.py  parameter_sweep.py  test_scenarios.py  test_system.py
static/: dashboard.html
tests/: __init__.py  test_core.py  test_inventory.py  test_pricing.py  test_risk.py
(+66 files in other folders)
